2007-02-21  Vincent Untz  <vuntz@gnome.org>

	* workspace-switcher.c: (applet_scroll): make it correctly work in RTL
	environments. Fix bug #407226

==================== 2.17.91 ====================

==================== 2.17.90 ====================

2007-01-14  Vincent Untz  <vuntz@gnome.org>

	* workspace-switcher.c: (setup_dialog): slow down speed of the spin
	button.
	Patch by Manu Cornet <manu.cornet@gmail.com>, fix bug #336731

==================== 2.16.2 ====================

==================== 2.16.1 ====================

==================== 2.16.0 ====================

==================== 2.15.92 ====================

2006-08-12  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: install in-process library in $(libdir)/gnome-panel
	Fix bug #351042

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* showdesktop.c: (applet_size_allocated): renamed to
	button_size_allocated()
	(update_icon): take into account the focus width and focus pad and
	thickness of the button to calculate the icon size
	also, force the icon size to be 16, 22 or 32 if it's < 22, < 32 and
	< 48
	(show_desktop_applet_fill): connect to the size_allocate signal of the
	button, and not of the applet
	Fix bug #335582

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* GNOME_Wncklet_Factory.server.in.in:
	* Makefile.am: make it possible to compile as an in-process applet
	* wncklet.c: ditto

==================== 2.15.91 ====================

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* GNOME_Wncklet_Factory.server.in.in: icon name changes

2006-08-08  Vincent Untz  <vuntz@gnome.org>

	* window-list.c: (display_about_dialog):
	(display_properties_dialog): update for icon name changes
	* window-menu.c: (window_menu_about): ditto
	* workspace-switcher.c: (display_about_dialog):
	(display_properties_dialog): ditto

2006-08-05  Vincent Untz  <vuntz@gnome.org>

	* window-list.c: remove useless include

2006-07-28  Vincent Untz  <vuntz@gnome.org>
