@@ -1,5 +1,13 @@
 2007-02-21  Vincent Untz  <vuntz@gnome.org>
 
+	* workspace-switcher.c: (update_workspaces_model): don't change the
+	spin button if it's the same value
+	(workspace_renamed): don't call update_workspaces_model(), but only
+	update the name of the renamed workspace in the treeview
+	That makes a big perf improvement when a11y is enabled.
+
+2007-02-21  Vincent Untz  <vuntz@gnome.org>
+
 	* workspace-switcher.c: (applet_scroll): make it correctly work in RTL
 	environments. Fix bug #407226
 
